# general-api-handler-cooperativa

./: '  .env  .gitignore  CEA909AE856ECD06F67A39216A8C3DAD5B4730A14B1329614333C3A47858A10D  Cargo.toml  Dockerfile  README.md  SCRUM-260-PLAN-DETAILED.md  SCRUM-260-PLAN.md  TODO.md  building.yml  coleccion-cuotas  deploy.yml  dummy_quotas_response.json  flake.nix  init-server.yml  payment-related  run-on-nix.sh  server-init.yml
.github/: copilot-instructions.md
.github/workflows/: dev-deployment.yml
docs/: FLUJO_RECOVER_PASSWORD.md  dummy_affiliates.md  dummy_fine_creation_query.md  dummy_loan_creation_query.md  dummy_loans_creation_query.md  dummy_paymen_creation_query.md  dummy_payment_creation_query.md
env_variables/: .env
scripts/: run-audit.ps1  run-k6.ps1
src/: config.rs  lib.rs  main.rs  test_sync.rs
src/endpoints/: auth_endpoints.rs  file_endpoints.rs  graphql_endpoints.rs  mod.rs
src/endpoints/handlers/: fetch_handler.rs  mod.rs
src/models/: auth.rs  file.rs  general.rs  graphql.rs  mod.rs  redis.rs  redis_om.rs
src/repos/: mod.rs
src/repos/auth/: mod.rs
src/repos/file/: mod.rs
tests/: auth.rs  auth_data_remapping.rs  auth_edge_cases.rs  mod.rs  password_recovery_integration.rs  utils.rs
tests/graphql/: cuota_afiliado_test.rs  cuota_prestamo_test.rs  cuota_test.rs  fine_query_test.rs  fine_test.rs  loan_create_test.rs  mod.rs  payment_create_test.rs  payment_creation_query_integrity_test.rs  payment_mutation_creation_test.rs  payment_mutation_test.rs  payment_test.rs  payment_user_query_test.rs
tests/load_tests/: create-and-get.js
(+27 files in other folders)
