[package]
name = "general-api"
version = "0.1.0"
edition = "2021"

[dependencies]
r2d2 = "0.8.10"
redis = { version = "0.29.1", features = ["json", "r2d2"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
juniper = "0.16.1"
envconfig = "0.11.0"
serde = "1.0.218"
serde_json = "1.0.1"
env_logger = "0.11.6"
sha2 = "0.10.9"
hex-literal = "0.4.1"
