[package]
name = "general-api"
version = "0.5.0"
edition = "2024"

[dependencies]
# redis
r2d2 = "0.8.10"
redis = { version = "0.29.1", features = ["json", "r2d2"] }

actix-web = "4.9.0"
actix-cors = "0.7.0"

# graphql
juniper = "0.16.1"

# Utility
envconfig = "0.11.0"
serde = "1.0.218"
serde_json = "1.0.1"
env_logger = "0.11.6"
sha2 = "0.10.9"
hex-literal = "0.4.1"
regex = "1.11.1"
rand = "0.9.1"
dotenv = "0.15.0"
chrono = "0.4.42"
futures = "0.3.31"

# for s3 - S3 support (disabled: path too long on Windows for aws-lc-sys build)
# aws-sdk-s3 = "1.110.0"
# aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
# tokio = { version = "1", features = ["full"] }
# actix-multipart = "0.7.2"
# actix-files = "0.6.8"
# aws-smithy-http-client = "1.1.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
